--- a/themes/sukl-pristupy-theme/layout/_partial/section-reports.ejs
+++ b/themes/sukl-pristupy-theme/layout/_partial/section-reports.ejs
@@ -1,18 +1,33 @@
-<section id="<%- site.data.content_cz[2].tag %>" class="section section-reports">
+<section id="<%- site.data.content_cz[count].tag %>" class="section section-reports">
     <div class="section-symbol section-symbol--white">
-        <img class="section-symbol__logo" src="./img/<%- site.data.content_cz[2].sectionLogo %>" alt="information-image">
+        <img class="section-symbol__logo" src="./img/<%- site.data.content_cz[count].sectionLogo %>"
+             alt="information-image">
     </div>
     <div class="section-table section-margin">
-        <h2 class="section__title"><%- site.data.content_cz[2].title %></h2>
+        <h2 class="section__title"><%- site.data.content_cz[count].title %></h2>
         <div class="section__line-container">
             <div class="section__line-1"></div>
             <div class="section__line-2"></div>
         </div>
-        <p class="section__description"><%- site.data.content_cz[2].description %></p>
+        <p class="section__description"><%- site.data.content_cz[count].description %></p>
         <div class="section-tabs">
-            <% for (var i in site.data.content_cz[2].content){ %>
+            <% for (var i in site.data.content_cz[count].content){ %>
             <div class="row-2 section-tab">
-
+                <img class="section-img__lock" src="./img/lock.png" alt="lock-img">
+                <div class="section-tab__table">
+                    <div class="section-tab__table-inner">
+                        <h2 class="section-tab__title"><%- site.data.content_cz[count].content[i].title %></h2>
+                        <% for (var s in site.data.content_cz[count].content[i].tabContent){ %>
+                        <a href="<%- site.data.content_cz[count].content[i].tabContent[s].url %>" target="<%- site.data.content_cz[count].content[i].tabContent[s].target %>">
+                            <div class="section-tab__table-button">
+                                <!-- <i class="fa <%- site.data.content_cz[count].content[i].tabContent[s].logo %> fa-2x section-tab__icon" aria-hidden="true"></i> -->
+                                <i class="fa <%- site.data.content_cz[count].content[i].tabContent[s].pictogram %> fa-2x section-tab__icon" aria-hidden="true"></i>
+                                <span class="section-tab__title"><%- site.data.content_cz[count].content[i].tabContent[s].title %></span>
+                            </div>
+                        </a>
+                        <% } %>
+                    </div>
+                </div>
             </div>
             <% } %>
         </div>
