--- a/themes/sukl-pristupy-theme/layout/_partial/menu.ejs
+++ b/themes/sukl-pristupy-theme/layout/_partial/menu.ejs
@@ -2,8 +2,52 @@
     <nav class="menu-nav">
         <div class="menu-nav__logo">
             <a href="#<%- site.data.content_cz[0].tag %>">
-                <img src="./img/menu-logo.png" class="menu-nav__logo-symbol" alt="logo">
-                <span class="menu-nav__logo-span">PŘÍSTUPY</span>
+                <!-- <img src="./img/logo.svg" class="menu-nav__logo-symbol" alt="logo"> -->
+
+
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+                <svg version="1.1" class="menu-nav__logo-symbol" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     width="211.4px" height="57.4px" viewBox="0 0 211.4 57.4" >
+<path style="fill-rule:evenodd;clip-rule:evenodd;" d="M110.4,12.9c2.8,0,5.6,0,8.4,0c0,0.3,0,0.5,0,0.7c0,5.5,0,11,0,16.4
+	c0,1.4,0.1,2.8,0.4,4.1c0.8,3.5,3.1,5.4,6.5,6c3.3,0.5,6.2-0.4,8.3-3.1c1-1.3,1.5-2.8,1.5-4.5c0-6.2,0-12.5,0-18.7
+	c0-1-0.1-0.9,0.9-0.9c2.3,0,4.6,0,6.8,0c0.2,0,0.4,0,0.7,0c0,0.3,0,0.5,0,0.7c0,6.2,0,12.4,0,18.7c0,1.8-0.2,3.6-0.8,5.4
+	c-1.1,3.3-3.2,5.8-6.4,7.3c-6,2.8-12.2,3-18.3,0.6c-3.8-1.5-6.5-4.3-7.7-8.3c-0.5-1.9-0.6-3.9-0.6-5.8c0-5.9,0-11.8,0-17.7
+	C110.4,13.4,110.4,13.2,110.4,12.9z"/>
+                    <path style="fill-rule:evenodd;clip-rule:evenodd;" d="M159.3,30.8c0,0.4,0,0.6,0,0.9c0,4.6,0,9.3,0,13.9c0,1.2,0.1,1-1,1
+	c-2.2,0-4.5,0-6.7,0c-0.2,0-0.4,0-0.7,0c0-11.2,0-22.4,0-33.6c0.2,0,0.4,0,0.6,0c2.4,0,4.8,0,7.2,0c0.5,0,0.6,0.2,0.6,0.7
+	c0,3.6,0,7.2,0,10.7c0,1.2,0,2.4,0,3.6c0,0,0.1,0,0.1,0.1c0.1-0.2,0.3-0.4,0.4-0.5c3.3-4.7,6.6-9.3,9.8-14c0.3-0.4,0.6-0.6,1.1-0.6
+	c2.6,0,5.2,0,7.7,0c0.2,0,0.4,0,0.8,0c-0.2,0.3-0.3,0.5-0.5,0.7c-3.4,4.8-6.7,9.7-10.1,14.5c-0.3,0.5-0.3,0.8,0,1.2
+	c4.7,5.6,9.3,11.1,14,16.7c0.1,0.1,0.2,0.3,0.4,0.5c-0.3,0-0.5,0-0.7,0c-3.1,0-6.1,0-9.2,0c-0.4,0-0.7-0.1-1-0.5
+	c-4.2-4.9-8.3-9.9-12.5-14.8C159.7,31.2,159.6,31.1,159.3,30.8z"/>
+                    <path style="fill-rule:evenodd;clip-rule:evenodd;" d="M104.2,21.9c-1.5-0.7-3-1.3-4.4-1.9c-2.4-0.9-4.8-1.5-7.3-1.2
+	c-0.9,0.1-1.9,0.3-2.7,0.7c-1.8,0.9-2,2.7-0.4,3.8c1.2,0.8,2.5,1.4,3.8,1.9c1.8,0.8,3.7,1.4,5.6,2.2c1.9,0.8,3.6,1.9,4.9,3.5
+	c4,4.9,2.2,12-3.8,14.6c-4,1.7-8.1,1.9-12.3,0.9c-2.2-0.5-4.4-1.3-6.5-2.3c-0.4-0.2-0.5-0.4-0.5-0.8c0-2.2,0-4.4,0-6.6
+	c0.3,0.2,0.5,0.3,0.8,0.4c2.5,1.5,5,2.9,7.9,3.4c1.9,0.4,3.8,0.5,5.8-0.1c1.6-0.5,2.3-1.5,2.3-3c0-0.9-0.5-1.6-1.3-2.1
+	c-0.9-0.5-1.9-1-2.9-1.4c-1.9-0.8-3.9-1.4-5.8-2.2c-1.8-0.7-3.5-1.8-4.9-3.2c-3.6-3.7-4-11.5,3.1-14.7c2-0.9,4.1-1.3,6.2-1.4
+	c4.2-0.2,8.2,0.8,12,2.5c0.1,0.1,0.3,0.3,0.3,0.4C104.2,17.5,104.2,19.7,104.2,21.9z"/>
+                    <path style="fill-rule:evenodd;clip-rule:evenodd;" d="M0,49.3c2,0.3,4,0.7,6,1c5,0.8,10,1,15,1c6.4-0.1,12.7-0.7,18.9-2.3
+	c2.9-0.8,5.6-1.8,8.3-3.1c3.6-1.8,5.6-4.8,6.7-8.6c0.7-2.3,1.4-4.5,2.2-6.8c0.4-1,1-2,1.5-3.1c0.4,0.7,0.8,1.3,1.1,1.8
+	c1.8,3,3.2,6.2,3.8,9.7c1.2,6.7-1.6,12.1-7.7,15.2c-3.2,1.6-6.7,2.5-10.2,2.9c-7.5,0.9-15,0.2-22.4-1.2C15.5,54.5,8,52.3,0.6,49.6
+	C0.4,49.5,0.2,49.4,0,49.3z"/>
+                    <path style="fill-rule:evenodd;clip-rule:evenodd;" d="M67.5,8.1c-1.2-0.2-2.3-0.4-3.4-0.6c-6.4-1.1-12.8-1.5-19.3-1.3
+	c-6.5,0.2-12.9,0.9-19.1,2.9c-2.1,0.7-4.2,1.6-6.2,2.5c-3.6,1.7-5.6,4.7-6.6,8.4c-0.6,2.2-1.3,4.3-2,6.4c-0.4,1.2-1.1,2.3-1.6,3.4
+	c-0.1,0-0.2,0-0.2,0c-0.9-1.6-1.8-3.2-2.6-4.8C5,22.2,4,19.2,4,16c-0.2-5.6,2.5-9.7,7.3-12.4c3-1.7,6.3-2.6,9.7-3.1
+	c5.8-0.8,11.6-0.6,17.5,0.1c9.8,1.2,19.3,3.8,28.6,7.2c0.1,0,0.2,0.1,0.3,0.1C67.4,8,67.4,8,67.5,8.1z"/>
+                    <path style="fill-rule:evenodd;clip-rule:evenodd;" d="M211.4,40.4c0,2.1,0,4.1,0,6.2c-8.5,0-17,0-25.6,0c0-11.2,0-22.4,0-33.6
+	c0.3,0,0.6,0,1,0c2.3,0,4.5,0,6.8,0c0.6,0,0.7,0.2,0.7,0.7c0,8.6,0,17.3,0,25.9c0,0.8,0,0.8,0.8,0.8c5.2,0,10.4,0,15.6,0
+	C210.9,40.4,211.2,40.4,211.4,40.4z"/>
+                    <path style="fill-rule:evenodd;clip-rule:evenodd;" d="M34.5,20.2c2.4,0.1,5.2,1,7.4,3.2c3,3.1,3,7.5,0,10.6
+	c-4.1,4.1-11.7,4.2-15.9,0.2c-3.6-3.4-3.3-8.6,0.6-11.7C28.7,21.1,31.2,20.2,34.5,20.2z"/>
+                    <path style="fill-rule:evenodd;clip-rule:evenodd;" d="M124.1,10c0.1-0.2,0.2-0.4,0.3-0.5c1.3-2,2.5-4.1,3.8-6.1
+	c0.1-0.2,0.4-0.4,0.6-0.4c2.1,0,4.2,0,6.3,0c0.1,0,0.2,0,0.3,0c0,0.1,0.1,0.1,0.1,0.2c-0.2,0.1-0.4,0.2-0.5,0.4
+	c-2.3,2-4.5,4.1-6.8,6.2c-0.2,0.2-0.5,0.3-0.8,0.3C126.3,10,125.2,10,124.1,10z"/>
+</svg>
+
+
+
+                <span class="menu-nav__logo-span"><%- site.data.content_cz[0].logoName %></span>
             </a>
         </div>
         <ul class="menu-nav__links clearfix">
