--- a/themes/sukl-pristupy-theme/source/css/main.css
+++ b/themes/sukl-pristupy-theme/source/css/main.css
@@ -341,6 +341,8 @@ strong {
     transition: margin-top .3s ease, width .3s ease;
 }
 
+
+
 .menu-nav__logo-span {
     position: absolute;
     top: 33px;
@@ -352,8 +354,11 @@ strong {
 }
 
 .menu-nav__logo-symbol {
-    background-image: url('../img/request-logo.png');
+    margin: -12px 0 0 0;
+    padding: 0;
+    fill: #003278;
     width: 100%;
+    transition: fill .3s ease;
 }
 
 .menu-nav__icon {
@@ -813,16 +818,19 @@ strong {
     LOADER
  */
 
-sk-cube-grid {
+.sk-cube-grid {
+    position: fixed;
     width: 40px;
     height: 40px;
-    margin: 100px auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);;
 }
 
 .sk-cube-grid .sk-cube {
     width: 33%;
     height: 33%;
-    background-color: #333;
+    background-color: #2b46af;
     float: left;
     -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
     animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
@@ -855,6 +863,24 @@ sk-cube-grid {
     -webkit-animation-delay: 0.2s;
     animation-delay: 0.2s; }
 
+@-webkit-keyframes sk-cubeGridOpacity {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes sk-cubeGridOpacityOut {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
 @-webkit-keyframes sk-cubeGridScaleDelay {
     0%, 70%, 100% {
         -webkit-transform: scale3D(1, 1, 1);
@@ -874,6 +900,7 @@ sk-cube-grid {
           transform: scale3D(0, 0, 1);
       }
 }
+
 
 /*******
     BREAKPOINTS
