--- a/themes/sukl-pristupy-theme/layout/_partial/section-information.ejs
+++ b/themes/sukl-pristupy-theme/layout/_partial/section-information.ejs
@@ -1,25 +1,25 @@
-<section id="<%- site.data.content_cz[count].tag %>" class="section section-information">
+<section id="<%- jsonName[count].tag %>" class="section section-information">
     <div class="section-symbol section-symbol--white">
-        <img class="section-symbol__logo" src="./img/<%- site.data.content_cz[count].sectionLogo %>" alt="information-image">
+        <img class="section-symbol__logo" src="./img/<%- jsonName[count].sectionLogo %>" alt="information-image">
     </div>
     <div class="section-table section-margin">
-        <h2 class="section__title"><%- site.data.content_cz[count].title %></h2>
+        <h2 class="section__title"><%- jsonName[count].title %></h2>
         <div class="section__line-container">
             <div class="section__line-1"></div>
             <div class="section__line-2"></div>
         </div>
-        <p class="section__description"><%- site.data.content_cz[count].description %></p>
+        <p class="section__description"><%- jsonName[count].description %></p>
         <div class="section-tabs">
-            <% for (var i in site.data.content_cz[count].content){ %>
+            <% for (var i in jsonName[count].content){ %>
                 <div class="row-3 section-tab">
-                    <a href="<%- site.data.content_cz[count].content[i].url %>" target="<%- site.data.content_cz[count].content[i].target %>">
+                    <a href="<%- jsonName[count].content[i].url %>" target="<%- jsonName[count].content[i].target %>">
                         <div class="section-tab__table">
                             <div class="section-tab__table-inner">
-                                <i class="fa <%- site.data.content_cz[count].content[i].logo %> fa-3x section-tab__icon"
+                                <i class="fa <%- jsonName[count].content[i].logo %> fa-3x section-tab__icon"
                                    aria-hidden="true"></i>
-                                <i class="fa <%- site.data.content_cz[count].content[i].pictogram %> section-tab__icon section-tab__icon-type"
+                                <i class="fa <%- jsonName[count].content[i].pictogram %> section-tab__icon section-tab__icon-type"
                                    aria-hidden="true"></i>
-                                <div class="section-tab__title"><%- site.data.content_cz[count].content[i].title %></div>
+                                <div class="section-tab__title"><%- jsonName[count].content[i].title %></div>
                             </div>
                         </div>
                     </a>
