--- a/themes/sukl-pristupy-theme/layout/_partial/section-welcome.ejs
+++ b/themes/sukl-pristupy-theme/layout/_partial/section-welcome.ejs
@@ -1,1 +1,1 @@
-<section id="<%- site.data.content_cz[count].tag %>" class="section-welcome background-config"></section>
+<section id="<%- jsonName[count].tag %>" class="section-welcome background-config"></section>
