--- a/themes/sukl-pristupy-theme/layout/_partial/menu.ejs
+++ b/themes/sukl-pristupy-theme/layout/_partial/menu.ejs
@@ -1,7 +1,7 @@
 <div class="menu" style="display: none">
     <nav class="menu-nav">
         <div class="menu-nav__logo">
-            <a href="#<%- site.data.content_cz[0].tag %>">
+            <a href="#<%- jsonName[0].tag %>">
                 <!-- <img src="./img/logo.svg" class="menu-nav__logo-symbol" alt="logo"> -->
 
 
@@ -47,18 +47,18 @@
 
 
 
-                <span class="menu-nav__logo-span"><%- site.data.content_cz[0].logoName %></span>
+                <span class="menu-nav__logo-span"><%- jsonName[0].logoName %></span>
             </a>
         </div>
         <ul class="menu-nav__links clearfix">
-            <% for (var i in site.data.content_cz) { %>
+            <% for (var i in jsonName) { %>
             <% if(i != 0) { %>
-            <li class="menu-nav__link"><a class="menu-nav__href" href="#<%- site.data.content_cz[i].tag %>"><span
+            <li class="menu-nav__link"><a class="menu-nav__href" href="#<%- jsonName[i].tag %>"><span
                             class="menu-nav__span">
-                        <% if(site.data.content_cz[i].tag == "portal-externich-identit") { %>
+                        <% if(jsonName[i].tag == "portal-externich-identit") { %>
                         <i class="fa fa-lock menu-nav__icon fa-lg" aria-hidden="true"></i>
                         <% } %>
-                        <%- site.data.content_cz[i].title %></span></a>
+                        <%- jsonName[i].title %></span></a>
             </li>
             <% } %>
             <% } %>
