--- a/themes/sukl-pristupy-theme/layout/layout.ejs
+++ b/themes/sukl-pristupy-theme/layout/layout.ejs
@@ -9,7 +9,7 @@
 <html class="no-js" lang="cz"> <!--<![endif]-->
 
 
-<% var json = site.data.content_cz %>
+<% var json = site.data.content_en %>
 
 <!-- Head -->
 <%- partial('_partial/head') %>
