--- a/themes/sukl-pristupy-theme/layout/_partial/head.ejs
+++ b/themes/sukl-pristupy-theme/layout/_partial/head.ejs
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
-    <title>SÚKL Přístupy</title>
+    <title><%- jsonName[0].siteTitle %></title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet">
     <!-- Flags CSS -->
