--- a/themes/sukl-pristupy-theme/layout/_partial/section-contact.ejs
+++ b/themes/sukl-pristupy-theme/layout/_partial/section-contact.ejs
@@ -1,4 +1,5 @@
 <section id="<%- jsonName[count].tag %>" class="section section-contact">
+    <!-- <div class="line-separate"></div> -->
     <div id="map"></div>
     <div class="section-table">
         <div class="section-table__title">
