--- a/themes/sukl-pristupy-theme/layout/_partial/head.ejs
+++ b/themes/sukl-pristupy-theme/layout/_partial/head.ejs
@@ -6,7 +6,7 @@
     <meta name="description" content=""/>
     <title><%- jsonName[0].siteTitle %></title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:700" rel="stylesheet">
     <!-- Flags CSS -->
     <%- css('css/vendor/flags.min.css') %>
     <!-- Font Awesome CSS -->
