--- a/themes/sukl-pristupy-theme/layout/layout.ejs
+++ b/themes/sukl-pristupy-theme/layout/layout.ejs
@@ -8,8 +8,14 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js" lang="cz"> <!--<![endif]-->
 
+<% var language = "en"; %>
+<% var json = null; %>
+<% if(language === "cz") { %>
+    <% json = site.data.content_cz; %>
+<% } else { %>
+    <% json = site.data.content_en; %>
+<% } %>
 
-<% var json = site.data.content_cz %>
 
 <!-- Head -->
 <%- partial('_partial/head', {jsonName: json}) %>
@@ -20,11 +26,11 @@
 <%- partial('_partial/loader') %>
 
 <!-- Menu -->
-<%- partial('_partial/menu', {jsonName: json}) %>
+<%- partial('_partial/menu', {jsonName: json, languageType: language}) %>
 
 <div class="container" style="display: none">
-    <% for (var i in site.data.content_cz){ %>
-    <% var path = '_partial/'+site.data.content_cz[i].partialId %>
+    <% for (var i in json){ %>
+    <% var path = '_partial/'+json[i].partialId %>
     <%- partial(path, {count: i, jsonName: json}) %>
     <% } %>
 </div>
