rm: hexo, use simple ejs generator

--- a/themes/sukl-pristupy-theme/layout/_partial/menu.ejs
+++ b/themes/sukl-pristupy-theme/layout/_partial/menu.ejs
@@ -69,7 +69,7 @@
                 </li>
             <% } else { %>
             <li class="menu-nav__lang-btn"><a href="./index.html"><img src="./img/blank.gif" class="flag flag-cz" alt="Czech Republic"/></a>
-                <a href="./en/index.html"><img src="./img/blank.gif" class="flag flag-gb" alt=""/></a>
+                <a href="./index_en.html"><img src="./img/blank.gif" class="flag flag-gb" alt=""/></a>
             </li>
             <% } %>
 
