--- a/themes/sukl-pristupy-theme/layout/_partial/head.ejs
+++ b/themes/sukl-pristupy-theme/layout/_partial/head.ejs
@@ -1,3 +1,24 @@
+<%
+function css() {
+  var result = '';
+  var path = '';
+
+  for (var i = 0, len = arguments.length; i < len; i++) {
+    path = arguments[i];
+
+    if (i) result += '\n';
+
+    if (Array.isArray(path)) {
+      result += css.apply(this, path);
+    } else {
+      if (path.indexOf('?') < 0 && path.substring(path.length - 4, path.length) !== '.css') path += '.css';
+      result += '<link rel="stylesheet" href="' + path + '">';
+    }
+  }
+
+  return result;
+}
+%>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
